# smog-watch-poland

./: .env.example  .gitignore  Justfile  LICENSE  README.md  docker-compose.yaml  main.py  pyproject.toml
config/: stations.yaml
notebooks/: eda_jan2026_airgradient_exploratory.ipynb  eda_jan2026_crisis.ipynb
scripts/: discover_sensors.py
sql/analysis/: 01_daily_avg_pm25.sql  02_who_limits.sql  03_parameter_stats.sql
sql/schema/: init.sql
src/data/: check_quality.py  fetch_data.py  load_to_postgres.py
tests/: test_fetch_data.py
