[project]
name = "smoke-watch"
version = "0.1.0"
description = "Air quality monitoring pipeline for DE portfolio"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.3",
    "pyarrow>=24.0.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.0",
    "pyyaml>=6.0.3",
    "psycopg2-binary>=2.9.12",
    "sqlalchemy>=2.0.50",
]

[dependency-groups]
dev = [
    "ruff>=0.14.13",
    "pytest>=9.0.3",
    "pytest-cov>=7.0.0",
    "requests-mock>=1.12.1",
    "nbconvert>=7.17.1",
]
eda = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "seaborn>=0.13.2",
    "scikit-learn>=1.8.0",
    "joblib>=1.3.2",
]

[project.scripts]
fetch-data = "data.fetch_data:main"
check-quality = "data.check_quality:check_raw_data"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/data"]

[tool.ruff]
line-length = 88
target-version = "py312"
# Redirect ruff cache to a hidden folder to keep root clean
cache-dir = ".cache/ruff"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
# Redirect pytest cache to a hidden folder
cache_dir = ".cache/pytest"

[tool.coverage.run]
# Redirect coverage data
data_file = ".cache/coverage/.coverage"
